--- a/mainPage.html
+++ b/mainPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<HTML>
+<HTML lang="ru">
 <HEAD>
 <TITLE>title</TITLE>
 </HEAD>
@@ -19,9 +19,9 @@
   
 <li><a href="../www.kubsu.ru/" title="Сайт КубГУ">number 5</a></li>
   
-<li><a href="#ancor">numder 6</a></li>
+<li><a href="#ancor">numder 6</a>
   
-<a id="#ancor">fragment</a>
+<a id="#ancor">fragment</a></li>
 
 <li><a href="students.html?faculty=FCTaAM&sort=age&group=MS">Найти студентов ФКТиПМ из математического обеспечения по возрасту</a></li>
   
