--- a/mainPage.html
+++ b/mainPage.html
@@ -47,7 +47,7 @@
 
 <li><a href="https://www.kubsu.ru/" rel="nofollow">Запрещённая ссылка</a></li>
 
-<li><a href="/redirect.html?url=https://www.kubsu.ru">Через промежуточную страницу</a></li>
+<li><!--<noindex>--><a href="https://www.kubsu.ru/">Не индексируется</a><!--</noindex>--></li>
 
 </ol>
 
