Fix href name in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <BODY>
 
-<a href="https://github.com/FeodorH/FeodorH.github.io-feodorH_HTML_Lab1/blob/main/mainPage.html" title = "Ссылка на главный модуль">main_page</a>
+<a href="mainPage.html" title = "Ссылка на главный модуль">main_page</a>
   
 </BODY>
 </HTML>
