--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     <area shape="rect" coords="0,0,100,50" href="http://www.kubsu.ru/" alt="Прямоугольник">
     <area shape="circle" coords="50,50,25" href="http://www.kubsu.ru/" alt="Круг">
 </map>
+
+<video width="640" height="360" controls>
+  <source src="main_video.mp4" type="video/mp4">
+  Ваш браузер не поддерживает видео тег.
+</video>
+   
   Возможно, с вас будут собираться персональные данные(!)
 </BODY>
 </HTML>
