--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </map>
 
 <video width="640" height="360" controls>
-  <source src="main_video.mp4" type="video/mp4">
+  <source src="test_video.mp4" type="video/mp4">
   Ваш браузер не поддерживает видео тег.
 </video>
    
