--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                             <div class="header-card large">
                                 <div class="card-image large">
                                     <!-- Пустое изображение - вы загрузите потом -->
-                                    <div>Изображение сертификата</div>
+                                    <div><img src="/assets/cup.png" /></div>
                                 </div>
                                 <div>
                                     <div class="card-title">Drupal-разработчик №1</div>
