--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     <h2>3. Whois kubsu.ru и kubsu-dev.ru</h2>
     <img src="screenshots/num4.PNG" alt="Команда whois">
 
+    <h2>4. SFTP:</h2>
+    <img src="screenshots/num5.PNG" alt="sftp">
 </body>
 </html>
