--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <img src="screenshots/num4.PNG" alt="Команда whois">
 
     <h2>4. SFTP:</h2>
-    <img src="screenshots/num5.PNG" alt="sftp">
+    <img src="screenshots/num5.png" alt="sftp">
 </body>
 </html>
