--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>Лабораторная работа 1</h1>
-    
+    <h1>Lab2:</h1>
     <h2>1. Ping kubsu.ru</h2>
     <img src="screenshots/num2.PNG" alt="Команда ping">
     
@@ -28,5 +27,28 @@
 
     <h2>4. SFTP:</h2>
     <img src="screenshots/num5.png" alt="sftp">
+
+    <h1>Lab2:</h1>
+    <h2>1. SFTP:</h2>
+    <img src="screenshots/num6.png" alt="sftp">
+
+    <h2>2. SFTP:</h2>
+    <img src="screenshots/num7.png" alt="sftp">
+
+    <h2>3. SFTP:</h2>
+    <img src="screenshots/num8.png" alt="sftp">
+
+    <h2>4. SFTP:</h2>
+    <img src="screenshots/num9.png" alt="sftp">
+
+    <h2>5. SFTP:</h2>
+    <img src="screenshots/num10.png" alt="sftp">
+
+    <h2>6. SFTP:</h2>
+    <img src="screenshots/num11.png" alt="sftp">
+
+    <h2>7. SFTP:</h2>
+    <img src="screenshots/num12.png" alt="sftp">
+
 </body>
 </html>
